[package]
name = "graphe"
version.workspace = true
description = "Session persistence layer for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
# WHY: gates error variants that reference tokio::task::JoinError; no runtime dep.
mneme-engine = ["dep:tokio"]
# WHY: gates raw entry points that bypass distilled-message filtering and
# preserve caller-supplied timestamps/metrics. Used only by agent export/import
# (issue #4163) — recall/serve must NOT enable this, or they will silently
# leak distilled messages or wedge updated_at indexes with past timestamps.
portability = []
test-core = []
test-full = []
test-support = []

[dependencies]
eidos = { path = "../eidos" }
koina = { path = "../koina", features = ["fjall"] }
fjall = { version = "3", default-features = false, features = ["lz4"] }
jiff = { workspace = true, features = ["serde"] }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
tokio-util = { workspace = true }

# WHY: session create + message append are on the hot path of every
# turn. Track regressions so schema or index changes surface in CI.
[[bench]]
name = "session_store"
harness = false
