[package]
name = "aletheia-hermeneus"
version.workspace = true
description = "LLM provider abstraction and Anthropic streaming client"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aletheia-koina = { path = "../koina" }
jiff = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
test-utils = []

[dev-dependencies]
proptest = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
