[package]
name = "hermeneus"
version.workspace = true
description = "LLM provider abstraction and Anthropic streaming client"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
koina = { path = "../koina" }
jiff = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tower = { workspace = true }
tracing = { workspace = true }

[features]
# Claude Code subprocess provider (delegates to `claude` CLI).
cc-provider = []
# Shared mock LLM provider for tests across the workspace.
# Use `test-support` (preferred); `test-utils` kept for compatibility.
test-utils = []
test-support = ["test-utils"]
test-core = []
test-full = []

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

# WHY: complexity::score_complexity runs on every message to pick a tier,
# and the concurrency limiter's acquire/release cycle wraps every provider
# call. Regressions in either surface as latency in every streamed
# completion, so both belong in CI-tracked microbenchmarks.
[[bench]]
name = "parser"
harness = false
