[package]
name = "aletheia-integration-tests"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["sqlite-tests", "knowledge-store"]
sqlite-tests = ["aletheia-mneme/sqlite"]
engine-tests = ["aletheia-mneme/mneme-engine"]
knowledge-store = ["aletheia-nous/knowledge-store", "aletheia-pylon/knowledge-store"]
# Test tiers (see docs/test-tiers.md)
test-core = ["engine-tests"]
test-full = ["test-core"]

[dev-dependencies]
aletheia-dokimion = { path = "../eval" }
aletheia-koina = { path = "../koina" }
aletheia-taxis = { path = "../taxis" }
aletheia-mneme = { path = "../mneme", default-features = false, features = ["test-support"] }
aletheia-hermeneus = { path = "../hermeneus", features = ["test-utils"] }
aletheia-nous = { path = "../nous" }
aletheia-organon = { path = "../organon" }
aletheia-thesauros = { path = "../thesauros" }
aletheia-pylon = { path = "../pylon" }
aletheia-symbolon = { path = "../symbolon" }
jiff = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
