[package]
name = "integration-tests"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["sqlite-tests", "knowledge-store"]
sqlite-tests = ["mneme/sqlite"]
engine-tests = ["mneme/mneme-engine"]
knowledge-store = ["nous/knowledge-store", "pylon/knowledge-store"]
# Test tiers (see docs/test-tiers.md)
test-core = ["engine-tests"]
test-full = ["test-core"]

[dev-dependencies]
dokimion = { path = "../eval" }
koina = { path = "../koina", features = ["test-support"] }
taxis = { path = "../taxis" }
mneme = { path = "../mneme", default-features = false, features = [
    "test-support",
] }
hermeneus = { path = "../hermeneus", features = ["test-utils"] }
nous = { path = "../nous" }
organon = { path = "../organon", features = ["test-support"] }
thesauros = { path = "../thesauros" }
pylon = { path = "../pylon" }
symbolon = { path = "../symbolon" }
jiff = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
