[package]
name = "aletheia-koina"
version.workspace = true
description = "Core types, errors, and tracing for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = []
test-full = []
test-support = []

[dependencies]
compact_str = { workspace = true }
jiff = { workspace = true }
rustix = { workspace = true, features = ["fs"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
