[package]
name = "aletheia-koina"
version.workspace = true
description = "Core types, errors, and tracing for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
test-core = []
test-full = []
test-support = []

[dependencies]
compact_str = { workspace = true }
jiff = { workspace = true }
rustix = { workspace = true, features = ["fs"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
criterion = { workspace = true }

# WHY: ID generation is on every session/turn/observation hot path. Track
# regressions in the internal ULID/UUID implementations against external
# baselines so any future PR that touches them surfaces a perf delta.
[[bench]]
name = "ids"
harness = false
