[package]
name = "aletheia-krites"
version.workspace = true
description = "Embedded Datalog engine with HNSW and graph support for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["graph-algo"]
graph-algo = []
storage-fjall = ["dep:fjall"]
krites-v2 = []
test-core = ["storage-fjall"]
test-full = []

[dependencies]
aletheia-eidos = { path = "../eidos" }

jiff = { workspace = true, features = ["serde"] }
ndarray = { version = "0.17", default-features = false, features = ["serde", "std"] }
tokio = { workspace = true }

# Engine core
rayon = { workspace = true }
ordered-float = { version = "5.3.0", default-features = false, features = ["std"] }

smallvec = { version = "1.13.2", default-features = false, features = ["serde", "write", "union", "const_generics", "const_new"] }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { version = "0.11", default-features = false }
rmp-serde = { version = "1.2", default-features = false }
crossbeam = { version = "0.8.4", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
rustc-hash = { version = "2.1.2", default-features = false }
twox-hash = { version = "2.1", default-features = false, features = ["std"] }
regex = { workspace = true }
sha2 = { workspace = true }
either = { version = "1", default-features = false }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v1", "serde"] }
pest = { version = "2.8", default-features = false }
pest_derive = { version = "2.8", default-features = false }
unicode-normalization = { version = "0.1", default-features = false }
aho-corasick = { version = "1.1", default-features = false }
rust-stemmers = { version = "1.2", default-features = false }
bytemuck = { version = "1.25", default-features = false }
lru = { version = "0.16", default-features = false }
rustix = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

# Storage backends
fjall = { version = "3", optional = true, default-features = false }

[dev-dependencies]
proptest = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
