[package]
name = "aletheia-krites"
version.workspace = true
description = "Embedded Datalog engine with HNSW and graph support for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["graph-algo"]
graph-algo = []
storage-fjall = ["dep:fjall"]
test-core = ["storage-fjall"]
test-full = []

[dependencies]
aletheia-eidos = { path = "../eidos" }

jiff = { workspace = true, features = ["serde"] }
ndarray = { version = "0.17", default-features = false, features = ["serde"] }
tokio = { workspace = true }

# Engine core
rayon = { workspace = true }
ordered-float = { version = "5.3.0", default-features = false }
priority-queue = "2.7"
smallvec = { version = "1.13.2", default-features = false, features = [
    "serde",
    "write",
    "union",
    "const_generics",
    "const_new",
] }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
rmp-serde = { version = "1.2", default-features = false }
crossbeam = "0.8.4"
itertools = { version = "0.14.0", default-features = false }
rustc-hash = { version = "2.1.2", default-features = false }
twox-hash = "2.1"
regex = { workspace = true }
sha2 = { version = "0.11", default-features = false }
either = { version = "1", default-features = false }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v1", "serde"] }
pest = "2.8"
pest_derive = "2.8"
unicode-normalization = { version = "0.1", default-features = false }
aho-corasick = { version = "1.1", default-features = false }
rust-stemmers = { version = "1.2", default-features = false }
bytemuck = { version = "1.25", default-features = false }
lru = { version = "0.16", default-features = false }
rustix = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

# Storage backends
fjall = { version = "3", default-features = false, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
