[package]
name = "krites"
version.workspace = true
description = "Embedded Datalog engine with HNSW and graph support for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["graph-algo"]
graph-algo = []
storage-fjall = ["dep:fjall"]
test-core = ["storage-fjall"]
test-full = []

[dependencies]
koina = { path = "../koina" }
eidos = { path = "../eidos" }

jiff = { workspace = true, features = ["serde"] }
tokio = { workspace = true }

# Engine core
rayon = { workspace = true }
priority-queue = "2.7"
smallvec = { version = "1.13.2", default-features = false, features = [
    "serde",
    "write",
    "union",
    "const_generics",
    "const_new",
] }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
rmp-serde = "1.2"
crossbeam = "0.8.4"
rustc-hash = { version = "2.1.2", default-features = false, features = ["std"] }
twox-hash = "2.1"
regex = { workspace = true }
sha2 = { workspace = true, default-features = false }
either = { version = "1", default-features = false }
rand = { workspace = true }
pest = "2.8"
pest_derive = "2.8"
unicode-normalization = { version = "0.1", default-features = false }
aho-corasick = { version = "1.1", default-features = false, features = ["std"] }
rust-stemmers = { version = "1.2", default-features = false }
bytemuck = { version = "1.25", default-features = false }
lru = { version = "0.17", default-features = false }
rustix = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

# Storage backends
fjall = { version = "3", default-features = false, optional = true }

[dependencies.ndarray]
version = "0.17"
default-features = false
features = ["serde", "std"]

[dependencies.ordered-float]
version = "5.3.0"
default-features = false
features = ["std"]

[dependencies.itertools]
version = "0.14.0"
default-features = false
features = ["use_std"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

# WHY: loom model-checks the manual `unsafe impl Sync` sites in
# runtime/hnsw/mmap_storage.rs and storage/fjall_backend.rs (#2864, #3066).
# Only active under `#[cfg(loom)]`, not built in normal test runs.
[target.'cfg(loom)'.dev-dependencies]
loom = { workspace = true }
