[package]
name = "aletheia-melete"
version.workspace = true
description = "Context distillation engine — compresses conversation history"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = []
test-full = []

[dependencies]
aletheia-hermeneus = { path = "../hermeneus" }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
aletheia-hermeneus = { path = "../hermeneus", features = ["test-utils"] }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
