[package]
name = "aletheia-mneme-bench"
version = "0.1.0"
description = "CozoDB validation gate — M1.2a benchmark"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/forkwright/aletheia"
rust-version = "1.85"
publish = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
# Standalone binary — excluded from workspace to avoid sqlite3 link conflict
# with rusqlite in aletheia-mneme. Run with: cd crates/mneme-bench && cargo run
# Vendor-patched: rayon made non-optional, graph_builder par_iter fixed, nalgebra cfg fixed.
cozo = { path = "../../vendor/cozo/cozo-core", default-features = false, features = ["compact"] }
rand = "0.8"
serde_json = "1"

[patch.crates-io]
graph_builder = { path = "../../vendor/graph_builder" }

[[bin]]
name = "cozo-bench"
path = "src/main.rs"
