[package]
name = "aletheia-mneme-bench"
version = "0.1.0"
description = "CozoDB validation gate — M1.2a benchmark"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/forkwright/aletheia"
rust-version = "1.85"
publish = false

[lints.rust]
# Workspace-equivalent (excluded from workspace — sqlite3 link conflict)
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[lints.clippy]
# Workspace-equivalent
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
large_types_passed_by_value = "warn"
map_err_ignore = "warn"
match_wildcard_for_single_variants = "warn"
needless_for_each = "warn"
rc_mutex = "warn"
string_add = "warn"
trait_duplication_in_bounds = "warn"
unused_self = "warn"

[dependencies]
# Standalone binary — excluded from workspace to avoid sqlite3 link conflict
# with rusqlite in aletheia-mneme. Run with: cd crates/mneme-bench && cargo run
# Vendor-patched: rayon made non-optional, graph_builder par_iter fixed, nalgebra cfg fixed.
cozo = { path = "../../vendor/cozo/cozo-core", default-features = false, features = ["compact"] }
rand = "0.8"
serde_json = "1"

[patch.crates-io]
graph_builder = { path = "../../vendor/graph_builder" }

[[bin]]
name = "cozo-bench"
path = "src/main.rs"
