[package]
name = "aletheia-mneme-engine"
version = "0.1.0"
description = "Embedded Datalog + HNSW + graph engine for Aletheia (absorbed from CozoDB 0.7.6)"
edition.workspace = true
license = "MPL-2.0"
repository.workspace = true
rust-version.workspace = true

[lints.rust]
rust_2018_idioms = { level = "allow", priority = 1 }
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
# CozoDB has unsafe in ndarray operations and string conversions — Phase 5 audit
unsafe_code = { level = "allow", priority = 1 }

[lints.clippy]
pedantic = { level = "allow", priority = 1 }
await_holding_lock = "warn"
dbg_macro = { level = "allow", priority = 1 }
todo = { level = "allow", priority = 1 }
unimplemented = { level = "allow", priority = 1 }

[features]
default = ["storage-mem"]
storage-mem = []
storage-new-rocksdb = ["dep:rocksdb"]
graph-algo = []

[dependencies]
# Pin rayon — 1.11 breaks graph_builder EdgeList::edges() via type mismatch
rayon = "=1.10.0"

# CozoDB core error type — migrating to snafu in Phase 5
miette = { version = "5.10.0", features = ["fancy"] }

# Graph/algorithm facade — provides page_rank + PageRankConfig + graph builder types
graph = "0.3.1"

# Priority queues and numeric types
ordered-float = "4.2.0"
priority-queue = "1.4"
ndarray = { version = "0.15.6", features = ["serde"] }
approx = "0.5.1"

# Data encoding
smallvec = { version = "1.13.2", features = ["serde", "write", "union", "const_generics", "const_new"] }
smartstring = { version = "1.0.1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = "1.0"
serde_bytes = "0.11"
rmp = "0.8"
rmp-serde = "1.2"
rmpv = "1.0"

# Utilities
crossbeam = "0.8.4"
itertools = "0.12.1"
rustc-hash = "1.1.0"
twox-hash = "1.6"
byteorder = "1.5"
num-traits = "0.2"
regex = "1"
sha2 = "0.10"
chrono = "0.4"
chrono-tz = "0.9"
either = "1"
rand = "0.8"
base64 = "0.22"
casey = "0.4"
uuid = { version = "1", features = ["v1", "v4", "serde"] }
pest = "2.7.9"
pest_derive = "2.7.9"
lazy_static = "1.4"
log = "0.4"
unicode-normalization = "0.1"
thiserror = "1"

# FTS (keep — cangjie stripped in Plan 02)
aho-corasick = "1.1"
rust-stemmers = "1.2"
swapvec = "0.3"

# Chinese tokenizer — stripped in Plan 02; kept here for verbatim compile
jieba-rs = "0.7"
fast2s = "0.3"

# HTTP fetcher — stripped in Plan 02; kept here for verbatim compile
minreq = { version = "2.11", features = ["https-rustls"] }

# CSV reader — stripped in Plan 02; kept here for verbatim compile
csv = "1.3"

# LSH
quadrature = "0.1"

# RocksDB backend (optional)
rocksdb = { version = "0.22.0", optional = true }

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
