[package]
name = "mneme"
version.workspace = true
description = "Session store and memory engine for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# WHY: graphe's fjall backend is now unconditional. mneme re-exports the
# session store API; mneme-engine layers the Datalog knowledge store on top.
default = ["graph-algo", "mneme-engine"]
graph-algo = ["episteme/graph-algo"]
# Optional HTTP cross-encoder reranker support from episteme.
reranker = ["episteme/reranker"]
# Optional GLiNER bookkeeping provider support from episteme.
gliner = ["episteme/gliner"]
# Gates MockEmbeddingProvider and other test helpers. No test code in release binaries.
test-support = ["episteme/test-support"]
embed-candle = ["episteme/embed-candle"]
# Passthrough for the network-dependent candle tests (see episteme #3683).
online-tests = ["episteme/online-tests"]
mneme-engine = ["dep:krites", "graphe/mneme-engine", "episteme/mneme-engine"]
storage-fjall = ["mneme-engine", "episteme/storage-fjall"]
# Test tiers (see docs/test-tiers.md)
test-core = ["mneme-engine", "storage-fjall"]
test-full = ["test-core", "embed-candle", "online-tests"]

[dependencies]
eidos = { path = "../eidos" }
graphe = { path = "../graphe", default-features = false }
episteme = { path = "../episteme", default-features = false }
krites = { path = "../krites", optional = true }

[dev-dependencies]
episteme = { path = "../episteme", features = ["test-support"] }
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "proptest_embedding"
path = "tests/proptest_embedding.rs"
required-features = ["test-support"]

[[test]]
name = "ts_compat"
path = "tests/ts_compat.rs"
