[package]
name = "aletheia-nous"
version.workspace = true
description = "Agent session pipeline — bootstrap, routing, tool execution"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
knowledge-store = ["aletheia-mneme/mneme-engine"]
# Gates mock search implementations and other test helpers. No test code in release binaries.
test-support = ["aletheia-hermeneus/test-utils", "aletheia-organon/test-support"]
# Test tiers (see docs/test-tiers.md)
test-core = ["knowledge-store"]
test-full = ["test-core"]

[dependencies]
aletheia-dianoia = { path = "../dianoia" }
aletheia-hermeneus = { path = "../hermeneus" }
aletheia-koina = { path = "../koina" }
aletheia-melete = { path = "../melete" }
aletheia-mneme = { path = "../mneme" }
aletheia-organon = { path = "../organon" }
aletheia-taxis = { path = "../taxis" }
aletheia-thesauros = { path = "../thesauros" }
jiff = { workspace = true }
prometheus = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
aletheia-hermeneus = { path = "../hermeneus", features = ["test-support"] }
aletheia-mneme = { path = "../mneme", features = ["test-support"] }
criterion = { workspace = true }
indexmap = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

# WHY: token estimation runs on every system prompt assembly and history
# truncation; surface regressions early.
[[bench]]
name = "budget"
harness = false
