[package]
name = "nous"
version.workspace = true
description = "Agent session pipeline — bootstrap, routing, tool execution"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# WHY: token estimation runs on every system prompt assembly and history
# truncation; surface regressions early.
[[bench]]
name = "budget"
harness = false

[features]
knowledge-store = ["mneme/mneme-engine"]
# Gates mock search implementations and other test helpers. No test code in release binaries.
test-support = ["hermeneus/test-utils", "organon/test-support"]
# Pre-LLM triage stage: intent, sensitivity, tier classification (default: on)
pre-llm-triage = []
# Enable mneme's async reranker facade (HttpReranker / NaiveReranker).
# Disabled by default to avoid pulling in reqwest + rustls for builds that
# do not need recall reranking.
reranker = ["mneme/reranker"]
# Enables mneme's in-process GLiNER ONNX bookkeeping provider facade.
gliner = ["mneme/gliner"]
# Enables mneme's in-process NuExtract ONNX bookkeeping provider facade.
nuextract = ["mneme/nuextract"]
# Test tiers (see docs/test-tiers.md)
test-core = ["knowledge-store"]
test-full = ["test-core"]
# Forward organon's deferred-schemas feature so nous can cfg-switch the execute loop.
deferred-schemas = ["organon/deferred-schemas"]

[dependencies]
aletheia-classify = { path = "../aletheia-classify" }
aletheia-routing = { path = "../aletheia-routing" }
aletheia-lexica = { workspace = true }
dianoia = { path = "../dianoia" }
hermeneus = { path = "../hermeneus" }
koina = { path = "../koina", features = ["fjall"] }
melete = { path = "../melete" }
mneme = { path = "../mneme" }
organon = { path = "../organon" }
taxis = { path = "../taxis" }
thesauros = { path = "../thesauros" }
# WHY: nous owns two small fjall-backed trackers (competence, uncertainty)
# that persist per-agent/domain scores and calibration points.
fjall = { version = "3", default-features = false }
jiff = { workspace = true }
prometheus-client = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hermeneus = { path = "../hermeneus", features = ["test-support"] }
mneme = { path = "../mneme", features = ["test-support"] }
criterion = { workspace = true }
indexmap = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
